# event_recording

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: pull-request-main.yml  push-main.yml
config/: recording_params.yaml
include/event_recording/: snapshot_wrapper.h
launch/: prometheus_exporter.launch  snapshot_buffer.launch
scripts/: prometheus_exporter.py
src/: snapshot_wrapper.cpp
